# azure-portal-use

./: README.md  pyproject.toml  requirements.txt
misc_tests/ai_foundry_browser_automation/: openai_browser_automation.py  requirements.txt
misc_tests/test_playwright/: image_ocr_test_.py  main.py  prompt.txt  raw_html_as_rag.txt  test_azure_portal.py
misc_tests/test_playwright/browser-use-analysis/: print_system_prompt.py
src/: __init__.py  all_frame_axtrees.yaml  base64_image.txt  chrome.py  dom.py  main.py  playwright_integration.py  system_prompt.md  system_prompt_bak.md  user_prompt.md
src/_bak/: main_browser_use.py
src/ai_foundry/: openai_browser_automation.py
src/chrome-devtools-mcp/: README.md  package.json
